# pricer_agentic_ai

./: .env.example  .gitignore  LICENSE  README.md  amazon_items_test.pkl  amazon_items_train.pkl  pyproject.toml
notebooks/: explore_data.ipynb
notebooks/specialist_model_training/: specialist_eval.ipynb  specialist_training.ipynb
src/price_intel/: config.py
src/price_intel/agents/: deals.py  ensemble_agent.py  frontier_agent.py  main.py  messaging_agent.py  planning_agent.py  random_forest_agent.py  scanner_agent.py  specialist_agent.py
src/price_intel/data/: aggregate_items.py  curate_data.py  env_setup.py  loaders.py  sampling_and_split.py  upload_dataset_to_hf.py
src/price_intel/interface/: gradio_app.py
src/price_intel/services/: modal_pricer_service.py
src/price_intel/train/: train_ensemble.py  train_random_forest.py
src/price_intel/vectorstore/: build_vectorstore.py  chroma_builder.py  description.py  embedder.py
